[project]
name = "13-llm-ans-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gguf>=0.17.1",
    "huggingface-hub>=0.35.3",
    "ipython>=9.6.0",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "zstd>=1.5.7.2",
]

[[tool.uv.index]]
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"
